--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/100 Rooms Quest [Source].loader.js";
+      var loaderUrl = buildUrl + "/Builds.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/100 Rooms Quest [Source].data.br",
-        frameworkUrl: buildUrl + "/100 Rooms Quest [Source].framework.js.br",
-        codeUrl: buildUrl + "/100 Rooms Quest [Source].wasm.br",
+        dataUrl: buildUrl + "/Builds.data.unityweb",
+        frameworkUrl: buildUrl + "/Builds.framework.js.unityweb",
+        codeUrl: buildUrl + "/Builds.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "100 Rooms Quest",
