--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         frameworkUrl: buildUrl + "/Builds.framework.js.unityweb",
         codeUrl: buildUrl + "/Builds.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "Paragor Games",
         productName: "100 Rooms Quest",
         productVersion: "0.1.0",
         showBanner: unityShowBanner,
